Related: tdf#148041 - sd editeng fix: clicking text will make line

spacing change for no reason in Impress

Do setupAutoFitText after setVisualizedPage and SetFixedCellHeight
was set, otherwise we can can have different text autofit calculation
results between view and edit mode.

follow-up after:
f61ea135430d7b4a1fac7de1e57a1314fbb1b49e
(editeng: use text scaling that better mimics MSO text scaling)

25d6bd3ebcf4a5d6003288863620565749433787
(Support FixedCellHeight in SdrAutoFitTextPrimitive2D)

Change-Id: I74ae843f6a2b66ad7b276b9c2c363052390803db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195665
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins
(cherry picked from commit a20dec704fb4e542ab0dc30776d8161605c603ce)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195764
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Tested-by: allotropia jenkins <jenkins@allotropia.de>